@@ -79,15 +79,18 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
   public List<PrefixedDimension> getQueryDimensionsByProgramStageId(
       String programId, String programStageId) {
 
-    Collection<ProgramStage> programStages = getProgramStages(programId, programStageId);
+    Set<ProgramStage> programStages = getProgramStages(programId, programStageId);
 
     if (CollectionUtils.isNotEmpty(programStages)) {
-      return programStages.stream().map(this::dimensions).flatMap(Collection::stream).toList();
+      return programStages.stream()
+          .map(this::dimensions)
+          .flatMap(Collection::stream)
+          .collect(Collectors.toList());
     }
     return List.of();
   }
 
-  private Collection<ProgramStage> getProgramStages(String programId, String programStageId) {
+  private Set<ProgramStage> getProgramStages(String programId, String programStageId) {
     checkProgramStageIsInProgramIfNecessary(programId, programStageId);
     return Optional.ofNullable(programStageId)
         .filter(StringUtils::isNotBlank)
@@ -135,7 +138,7 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                         filterByValueType(
                             QUERY,
                             ofItemsWithProgram(p, getTeasIfRegistrationAndNotConfidential(p))),
-                        ofItemsWithProgram(p, getCategoriesIfNeeded(p)),
+                        ofItemsWithProgram(p, getCategories(p)),
                         ofItemsWithProgram(p, getAttributeCategoryOptionGroupSetsIfNeeded(p)))))
         .orElse(List.of());
   }
@@ -153,7 +156,7 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                             AGGREGATE,
                             ofItemsWithProgram(
                                 ps.getProgram(), ps.getProgram().getTrackedEntityAttributes())),
-                        ofItemsWithProgram(ps.getProgram(), getCategoriesIfNeeded(ps.getProgram())),
+                        ofItemsWithProgram(ps.getProgram(), getCategories(ps.getProgram())),
                         ofItemsWithProgram(
                             ps.getProgram(),
                             getAttributeCategoryOptionGroupSetsIfNeeded(ps.getProgram())))))
@@ -176,7 +179,7 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
     return ATTRIBUTE == categoryOptionGroupSet.getDataDimensionType();
   }
 
-  private Collection<Category> getCategoriesIfNeeded(Program program) {
+  private List<Category> getCategories(Program program) {
     return Optional.of(program)
         .filter(Program::hasNonDefaultCategoryCombo)
         .map(Program::getCategoryCombo)
@@ -184,8 +187,7 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
         .orElse(List.of());
   }
 
-  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
-      Program program) {
+  private List<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(Program program) {
     return Optional.of(program)
         .filter(Program::isRegistration)
         .map(Program::getTrackedEntityAttributes)
